# cgtools

./: .gitignore  Cargo.toml  assets.dvc  readme.md
.dvc/: config
examples/: demo_readme_example.md  index.html  readme.md
examples/math/life/: readme.md
examples/minwebgl/3d_line/: readme.md
examples/minwebgl/3d_line/src/: main.rs
examples/minwebgl/3d_line_dash/: Cargo.toml
examples/minwebgl/3d_line_dash/src/: main.rs
examples/minwebgl/animation_amplitude_change/: readme.md
examples/minwebgl/animation_surface_rendering/: readme.md
examples/minwebgl/area_light/: readme.md
examples/minwebgl/attributes_instanced/: readme.md
examples/minwebgl/attributes_matrix/: readme.md
examples/minwebgl/attributes_vao/: readme.md
examples/minwebgl/color_space_conversions/: readme.md
examples/minwebgl/curve_surface_rendering/: readme.md
examples/minwebgl/deferred_shading/: readme.md
examples/minwebgl/diamond/: readme.md
examples/minwebgl/filter/: readme.md
examples/minwebgl/filters/: assets.dvc  readme.md
examples/minwebgl/gltf_viewer/: Cargo.toml  readme.md
examples/minwebgl/hexagonal_grid/: readme.md
examples/minwebgl/hexagonal_map/: readme.md
examples/minwebgl/jewelry_site/: assets.dvc  readme.md
examples/minwebgl/lottie_surface_rendering/: readme.md
examples/minwebgl/make_cube_map/: readme.md
examples/minwebgl/mapgen_tiles_rendering/: readme.md
examples/minwebgl/minimize_wasm/: readme.md
examples/minwebgl/narrow_outline/: readme.md
examples/minwebgl/obj_load/: readme.md
examples/minwebgl/obj_viewer/: readme.md
examples/minwebgl/obj_viewer copy/: Cargo.toml
examples/minwebgl/obj_viewer copy/shaders/: shader.frag  shader.vert
examples/minwebgl/obj_viewer copy/src/: main.rs
examples/minwebgl/object_picking/: readme.md
examples/minwebgl/outline/: readme.md
examples/minwebgl/pbr_lighting/: readme.md
examples/minwebgl/postprocessing/: readme.md
examples/minwebgl/raycaster/: readme.md
examples/minwebgl/renderer_with_outlines/: readme.md
examples/minwebgl/simple_pbr/: readme.md
examples/minwebgl/skeletal_animation/: readme.md
examples/minwebgl/space_partition/: readme.md
examples/minwebgl/spinning_cube_size_opt/: readme.md
examples/minwebgl/sprite_animation/: readme.md
examples/minwebgl/text_msdf/: readme.md
examples/minwebgl/text_rendering/: readme.md
examples/minwebgl/trivial/: readme.md
examples/minwebgl/uniforms_animation/: readme.md
examples/minwebgl/uniforms_ubo/: readme.md
examples/minwebgl/video_as_texture/: readme.md
examples/minwebgl/wfc/: readme.md
examples/minwebgpu/cool_shader/: Cargo.toml  tutorial.md
examples/minwebgpu/cool_shader/shaders/: shader copy.wgsl  shader.wgsl  shader_main.wgsl
examples/minwebgpu/cool_shader/src/: camera_controls.rs  main.rs
examples/minwebgpu/deffered_rendering/: readme.md
examples/minwebgpu/hello_triangle/: readme.md
examples/minwebgpu/noise_viewer/: Cargo.toml  README.md  gui.js  index.html  main.py  style.css
examples/minwebgpu/noise_viewer/shaders/: fragment_2d_main.wgsl  hash_glue.wgsl  hash_list.txt  noise_list.txt  vertex_main.wgsl
examples/minwebgpu/noise_viewer/shaders/hash/: BlumBlumShub_11.wgsl  CityHash_11.wgsl  HashWIthoutSine_11.wgsl  IntegerHashI_11.wgsl  InterleavedGradientNoise_21.wgsl  JKISS32_21.wgsl  LinearCongruentialGenerator_11.wgsl  RandFast_21.wgsl  bbs.wgsl  cityhash.wgsl  esgtsa_11.wgsl  simple_21.wgsl
examples/minwebgpu/noise_viewer/shaders/noise/: perlin_21.wgsl
examples/minwebgpu/noise_viewer/shaders/noise/2d/: perlin3_21.wgsl
examples/minwebgpu/noise_viewer/src/: assembler.rs  lil_gui.rs  loader.rs  main.rs  renderer.rs  shader.rs  uniform.rs
examples/minwgpu/grid_render/: readme.md
examples/minwgpu/hello_triangle/: readme.md
module/blank/cg_tools/: Cargo.toml
module/blank/cgtools/: Cargo.toml  readme.md
module/blank/mdmath/: Cargo.toml
module/blank/mdmath_ai/: Cargo.toml
module/blank/mdmath_cg/: Cargo.toml
module/blank/mdmath_linalg/: Cargo.toml
module/helper/behaviour_tree/: Cargo.toml
module/helper/line_tools/src/d3/: line.rs
module/helper/line_tools/src/d3/shaders/: main.frag  main.vert
module/helper/renderer/: Cargo.toml  changelog.md  readme.md
module/helper/renderer/src/webgl/: skeleton.rs
module/helper/renderer/src/webgl/loaders/: draco.rs  gltf.rs  ktx2.rs  mod.rs
module/helper/renderer/tests/: ktx2_oracle_tests.rs  ktx2_tests.rs
module/helper/renderer/tests/fixtures/: etc1s-65x33.ktx2  uastc-65x33.ktx2
module/helper/tilemap_renderer/: Cargo.toml
module/helper/tilemap_scene/: Cargo.toml
module/helper/uastc_tools/: Cargo.toml  readme.md
module/helper/uastc_tools/src/: lib.rs
module/helper/vectorizer/: readme.md
module/helper/vectorizer/article/: article.md  fine_tuning.md
module/min/minwebgl/: Cargo.toml
module/min/minwebgl/src/: lib.rs  texture.rs  webgl.rs
module/min/minwebgl/src/texture/: compressed.rs
module/min/minwebgl/tests/: compressed_format_tests.rs
module/min/minwebgpu/src/: lib.rs
module/min/minwgpu/: Cargo.toml
research/: vtk.md
