[package]
name = "minwebgl_gltf_viewer"
version = "0.1.0"
edition = "2021"
authors = [
  "Kostiantyn Mysnyk <wandalen@obox.systems>",
  "Avramenko Yevhenii <yevhenii.av@obox.systems>"
]

[lints]
workspace = true

[features]
# Load a KTX2 ( KHR_texture_basisu, UASTC ) model instead of the default, and pull the decode path
# into `renderer`. Produce such a model with `gltf-transform uastc in.glb out.glb` ( needs
# KTX-Software's `ktx` CLI on PATH ). The default build is unaffected.
ktx2 = [ "renderer/ktx2" ]

[dependencies]

minwebgl = { workspace = true, features = [ "future", "math", "diagnostics" ] }
mingl = { workspace = true, features = [ "camera_orbit_controls" ] }
gltf = { workspace = true, features = [ "import", "KHR_materials_specular" ] }
renderer = { workspace = true }
zune-hdr = { workspace = true }
serde = { workspace = true, features = [ "derive" ] }
serde-wasm-bindgen = { workspace = true }

[dependencies.web-sys]
workspace = true
features = [
  'MouseEvent',
  'PointerEvent',
  'WheelEvent',
  'WebGlTexture',
  'HtmlImageElement',
  'Blob',
  'BlobPropertyBag',
  'Url',
  'WebGlFramebuffer',
  'WebGlRenderbuffer'
]
