[package]
name = "minwebgpu_noise_viewer"
version = "0.1.0"
edition = "2021"
authors = [ 
  "Kostiantyn Mysnyk <wandalen@obox.systems>",
  "Avramenko Yevhenii <yevhenii.av@obox.systems>" 
]
license = "MIT"

[dependencies]
bytemuck = { workspace = true }
wasm-bindgen = { workspace = true }
serde-wasm-bindgen = "0.6.5"
lazy_static = "1.5.0"
serde = { version = "1.0", features = ["derive"] }

[dependencies.minwebgpu]
workspace = true
features = [
  'future',
  'file',
  'log',
  'math'
]

[dependencies.web-sys]
workspace = true
features = [
  'HtmlOptionElement',
  'HtmlSelectElement',
  'Event'
]

