[package]
name = "renderer"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"
authors = [
  "Kostiantyn Mysnyk <wandalen@obox.systems>",
  "Avramenko Yevhenii <yevhenii.av@obox.systems>",
  "Vadym Bilan <vadym.b@obox.systems>"
]
license = "MIT"
repository = "https://github.com/Wandalen/cgtools"
homepage = "https://github.com/Wandalen/cgtools/tree/master/module/helper/renderer"
documentation = "https://docs.rs/renderer"
description = "3D renderer for WebGL applications with glTF loading, scene management, and material support"
readme = "readme.md"
keywords = ["renderer", "webgl", "3d", "gltf", "graphics"]
categories = ["graphics", "rendering", "web-programming", "game-development"]
include = [
    "src/**/*",
    "tests/**/*",
    "Cargo.toml",
    "readme.md",
    "license*",
    "changelog*",
]

[lints]
workspace = true

[features]
enabled = [
  "dep:mod_interface",
  "dep:minwebgl",
  "dep:mingl",
  "dep:gltf",
  "dep:asbytes",
  "dep:former",
  "dep:uuid",
  "dep:web-sys",
  "dep:clone_dyn_types",
  "dep:zune-hdr",
  "dep:rustc-hash"
]
default = [ "enabled" ]
full = [ "enabled", "webgl", "animation", "ktx2" ]
webgl = []
animation = [ "dep:animation", "dep:clone_dyn_types" ]
# `KHR_texture_basisu` ( KTX2 / Basis Universal ) texture decode in the glTF loader.
# Pure Rust: `ktx2` parses the container, `ruzstd` undoes Zstandard supercompression,
# `uastc_tools` transcodes UASTC blocks to a format the GPU can sample. UASTC only --
# ETC1S / BasisLZ payloads are rejected with a clear error.
ktx2 = [ "dep:ktx2", "dep:ruzstd", "dep:uastc_tools" ]

[dependencies]

mod_interface = { workspace = true, optional = true }
minwebgl = { workspace = true, features = [ "future", "math", "diagnostics" ], optional = true }
mingl = { workspace = true, features = [ "web", "camera_orbit_controls", "character_controls" ], optional = true }
# `allow_empty_texture` is enabled unconditionally, not only under the `ktx2` feature.
# It does two things in gltf-json 1.4.1: it makes `Texture::source()` return `Option< Image >`
# ( a texture whose image comes from an extension has no `source` field ), and it allowlists
# `KHR_texture_basisu` / `EXT_texture_webp` / `MSFT_texture_dds` in `ENABLED_EXTENSIONS`, so
# `from_slice` stops rejecting such files outright. Gating it on `ktx2` would give
# `source()` two different signatures across builds and split the texture loop into two
# `cfg` shapes; enabling it always keeps one code path, and turns the feature-off behaviour
# on a basisu-only asset from a *panic* ( `.nth( u32::MAX ).unwrap()` ) into a clear error.
gltf = { workspace = true, features = [ "import", "extensions", "KHR_materials_specular", "KHR_lights_punctual", "utils", "allow_empty_texture" ], optional = true }
ktx2 = { workspace = true, optional = true }
ruzstd = { workspace = true, optional = true }
uastc_tools = { workspace = true, optional = true }
animation = { workspace = true, optional = true }
zune-hdr = { workspace = true, optional = true }
rustc-hash = { workspace = true, optional = true }
clone_dyn_types = { workspace = true, optional = true }

asbytes = { workspace = true, optional = true }
former = { workspace = true, optional = true }
uuid = { version = "1.12.1", features = ["v4", "js"], optional = true }

[dependencies.web-sys]
workspace = true
optional = true
features = [
  'MouseEvent',
  'PointerEvent',
  'WheelEvent',
  'WebGlTexture',
  'HtmlImageElement',
  'Blob',
  'BlobPropertyBag',
  'Url',
  'WebGlFramebuffer',
  'WebGlRenderbuffer',
  'HtmlSpanElement',
  'HtmlSelectElement'
]

[dev-dependencies]
wasm-bindgen-test = { workspace = true }
wasm-bindgen-futures = { workspace = true }
test_tools = { workspace = true }
approx = { workspace = true, features = [] }
# T7.2 correctness oracle: decodes the PNG-textured twin natively so the transcoded UASTC can be
# diffed against it. Only the `ktx2_oracle_tests` integration test uses it -- PNG codec only, to
# avoid pulling the full image-codec set ( ravif/avif etc. ) into the test build.
image = { workspace = true, default-features = false, features = [ "png" ] }

# Metadata for crates.io
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
default-target = "wasm32-unknown-unknown"
targets = [
    "wasm32-unknown-unknown",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
    "x86_64-apple-darwin",
]

# Cargo.toml maintenance metadata
[package.metadata.release]
pre-release-replacements = [
    { file = "readme.md", search = "renderer = \"[0-9.]+\"", replace = "renderer = \"{{version}}\"" },
    { file = "changelog.md", search = "## Unreleased", replace = "## Unreleased\n\n## {{version}} - {{date}}" },
]
