[package]
name = "minwgpu"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Minimal, opinionated toolkit that reduces boilerplate for common wgpu patterns (context, buffers, textures)"
include = [
    "src/**/*",
    "spec.md",
    "Cargo.toml",
    "readme*",
    "license*",
    "changelog*",
]

[dependencies]
wgpu.workspace = true
pollster.workspace = true
mingl.workspace = true
error_tools.workspace = true
asbytes.workspace = true

[lints]
workspace = true
